--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
-        "axios": "^0.21",
         "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "resolve-url-loader": "^5.0.0",
+        "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
-        "sass-loader": "^11.0.1"
+        "sass-loader": "^11.0.1",
+        "vue-loader": "^16.2.0"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.0.0",
+        "axios": "^0.26.0",
         "bootstrap": "^5.1.3",
-        "sweetalert2": "^11.4.0"
+        "sweetalert2": "^11.4.0",
+        "vue": "^3.2.31",
+        "vue-axios": "^3.4.1",
+        "vue-router": "^4.0.13"
     }
 }
