--- a/package.json
+++ b/package.json
@@ -12,21 +12,20 @@
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
         "bootstrap": "^5.1.3",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.0-beta.17",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
-        "vue-loader": "^16.2.0"
+        "vue": "^2.6.14",
+        "vue-loader": "^15.9.5",
+        "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.0.0",
-        "axios": "^0.26.0",
+        "axios": "^0.26.1",
         "bootstrap": "^5.1.3",
-        "sweetalert2": "^11.4.0",
-        "vue": "^3.2.31",
-        "vue-axios": "^3.4.1",
-        "vue-router": "^4.0.13"
+        "sweetalert2": "^11.4.0"
     }
 }
